Fix issue of whitespace on right margin

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import '~antd/dist/antd.css';
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .App {
     text-align: center;
 }
